--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.datasource.password=banco123
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+secret.token.secret=JAVAGAS_@123#
