--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 secret.token.secret=JAVAGAS_@123#
+secret.token.secret.candidate=JAVAGAS_@123#CANDIDATE
